<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/default_bg">

<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal"
              android:layout_centerVertical="true" android:layout_centerHorizontal="true">
       <Button android:id="@+id/button_webview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_webview" android:onClick="selectFlavour"/>
       <Button android:id="@+id/button_xwalk" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_xwalk" android:onClick="selectFlavour"/>
       <Button android:id="@+id/button_exo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_exo" android:onClick="selectFlavour"/>
</LinearLayout>

</RelativeLayout>
